--- a/C++ & Arduino Combined/PCD/PCD/ArduSketch3/Debug/Makefile
+++ b/C++ & Arduino Combined/PCD/PCD/ArduSketch3/Debug/Makefile
@@ -67,7 +67,7 @@ ADDITIONAL_DEPENDENCIES:=
 OUTPUT_FILE_DEP:= ./makedep.mk
 
 LIB_DEP+=  \
-C:/Users/Hans\ V.\ Rasmussen/Documents/GitHub/ChickenDoor/C++\ &\ Arduino\ Combined/PCD/PCD/ArduinoCore/Debug/libArduinoCore.a
+K:/Users/Hans\ V.\ Rasmussen/Documents/GitHub/Project_ChickenDoor/C++\ &\ Arduino\ Combined/PCD/PCD/ArduinoCore/Debug/libArduinoCore.a
 
 LINKER_SCRIPT_DEP+= 
 
@@ -108,7 +108,7 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP) $(LINKER_SCRIPT_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR8/GNU Linker : 4.9.2
-	$(QUOTE)K:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="ArduSketch3.map" -Wl,--start-group -Wl,-lm -Wl,-lArduinoCore  -Wl,--end-group -Wl,-L"C:\Users\HANSV~1.RAS\DOCUME~1\GitHub\CHICKE~1\C__&AR~1\PCD\PCD\ARDUIN~1\Debug"  -Wl,--gc-sections -mmcu=atmega328p -B "K:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.2.132\gcc\dev\atmega328p" -Os  
+	$(QUOTE)K:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="ArduSketch3.map" -Wl,--start-group -Wl,-lm -Wl,-lArduinoCore  -Wl,--end-group -Wl,-L"K:\Users\HANSV~1.RAS\DOCUME~1\GitHub\PROJEC~1\C__&AR~1\PCD\PCD\ARDUIN~1\Debug"  -Wl,--gc-sections -mmcu=atmega328p -B "K:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.2.132\gcc\dev\atmega328p" -Os  
 	@echo Finished building target: $@
 	"K:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "ArduSketch3.elf" "ArduSketch3.hex"
 	"K:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "ArduSketch3.elf" "ArduSketch3.eep" || exit 0
