--- a/C++ & Arduino Combined/PCD/Makefile
+++ b/C++ & Arduino Combined/PCD/Makefile
@@ -1,8 +1,9 @@
 BOARD_TAG   = nano
-BOARD_SUB   = atmega328
+BOARD_SUB   = atmega328old
+MONITOR_BAUDRATE  = 115200
 ARDUINO_PORT = /dev/ttyUSB0
-ARDUINO_DIR = /opt/Arduino/arduino-1.8.5/
-ARDMK_DIR = /opt/Arduino/arduino-mk
+ARDUINO_DIR = /home/hans/Documents/arduino-1.8.8
+ARDMK_DIR = /home/hans/Documents/Github/Arduino-Makefile
 AVRDUDE_CONF = /etc/avrdude.conf
 
-include /opt/Arduino/arduino-mk/Arduino.mk
+include /home/hans/Documents/Github/Arduino-Makefile/Arduino.mk
