Updated the setup and Makefile

--- a/C++_Arduino_combined/PCD/Makefile
+++ b/C++_Arduino_combined/PCD/Makefile
@@ -2,8 +2,8 @@ BOARD_TAG   = nano
 BOARD_SUB   = atmega328old
 MONITOR_BAUDRATE  = 115200
 ARDUINO_PORT = /dev/ttyUSB0
-ARDUINO_DIR = /home/hans/Documents/Github/Project_ChickenDoor/C++_Arduino_combined/PCD/arduino-1.8.8
-ARDMK_DIR = /home/hans/Documents/Github/Project_ChickenDoor/C++_Arduino_combined/PCD/Arduino-Makefile
+ARDUINO_DIR = ./arduino-1.8.8
+ARDMK_DIR = ./Arduino-Makefile
 AVRDUDE_CONF = /etc/avrdude.conf
 
-include /home/hans/Documents/Github/Project_ChickenDoor/C++_Arduino_combined/PCD/Arduino-Makefile/Arduino.mk
+include ./Arduino-Makefile/Arduino.mk
